@startuml

title __HOME's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.home {
        class com.unidates.Unidates.UniDates.View.home.CardUtenteHome {
            + Card()
            + CardUtenteHome()
            - getLikeButton()
            - reportButton()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.home {
        class com.unidates.Unidates.UniDates.View.home.HomePage {
            ~ listaStudenti : List<StudenteDTO>
            + HomePage()
            + create()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.home {
        class com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage {
            ~ altezza : Span
            ~ cognome : Span
            ~ colore_capelli : Span
            ~ colore_occhi : Span
            ~ compleanno : Span
            ~ instagram : Span
            ~ interessi : Span
            ~ nascita : Span
            ~ nome : Span
            ~ numero : Span
            ~ residenza : Span
            ~ topics : Span
            ~ tot : VerticalLayout
            + Page()
            + RicercaProfiloPage()
            + setParameter()
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.View.home.CardUtenteHome -up-|> com.vaadin.flow.component.html.Div
  com.unidates.Unidates.UniDates.View.home.CardUtenteHome o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.home.CardUtenteHome o-- com.unidates.Unidates.UniDates.Control.ModerationControl : moderationControl
  com.unidates.Unidates.UniDates.View.home.CardUtenteHome o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.home.HomePage -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unidates.Unidates.UniDates.View.home.HomePage o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.home.HomePage o-- com.unidates.Unidates.UniDates.Control.ModerationControl : moderationControl
  com.unidates.Unidates.UniDates.View.home.HomePage o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage .up.|> com.vaadin.flow.router.HasUrlParameter
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage o-- com.unidates.Unidates.UniDates.DTOs.StudenteDTO : daCercare
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage o-- com.unidates.Unidates.UniDates.DTOs.StudenteDTO : inSessione
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.home.RicercaProfiloPage o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
